# open-realtime

./: .env.example  Cargo.toml  E2E_TEST_PLAN.md
.github/workflows/: ci.yml
src/: audio.rs  lib.rs  pipeline.rs  protocol.rs  server.rs  traits.rs  turn_taking.rs
src/transport/: fake.rs  mod.rs  openai.rs
tests/: audio_conversation.rs  audio_format.rs  connection.rs  conversation_items.rs  errors.rs  interruptions.rs  localhost.rs  modalities.rs  response_lifecycle.rs  response_phases.rs  session.rs  text_conversation.rs  tools.rs  turn_detection.rs
tests/common/: mod.rs
